--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "Open Source CSS Framework",
   "main": "dist/blaze.min.css",
   "files": [
-    "dist"
+    "dist",
+    "scss"
   ],
   "scripts": {
     "prescss": "rm -rf dist && mkdir dist",
